# anime-helper-api-rocket

./: Cargo.toml
src/: _main_basic.rs  _main_old.rs  ctx.rs  main.rs  model.rs
src/api/: mod.rs
src/api/news/: mod.rs
src/api/releases/: mod.rs
src/controller/: releases.rs
src/utils/: mod.rs
