[package]
edition = "2021"
name = "anime-helper-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
reqwest = {version = "0.11.22", features = ["blocking"]}
rocket = "0.5.0"
scraper = "0.18.1"
xml = "0.8.10"
