[package]
edition = "2021"
name = "anime-helper-api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
reqwest = {version = "0.11.22", features = ["blocking", "json"]}
scraper = "0.18.1"
# -- Serde
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"
serde_with = "3"
xml = "0.8.10"
# -- Async
async-trait = "0.1"
tokio = {version = "1", features = ["full"]}
# -- Web
axum = "0.7.1"
tower-cookies = "0.10"
tower-http = {version = "0.5", features = ["fs"]}
# -- Others
chrono-tz = "0.8.4"
lazy-regex = "3"
strum_macros = "0.25"
tzfile = "0.1.3"
uuid = {version = "1", features = ["v4", "fast-rng"]}
url = "2.5.0"
http-cache-reqwest = "0.12.0"
reqwest-middleware = "0.2.4"
